--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-jdbc</artifactId>
 		</dependency>
+		
+		<!-- pagehelper分页插件  -->
+		<dependency>
+   	 		<groupId>com.github.pagehelper</groupId>
+    		<artifactId>pagehelper</artifactId>
+    		<version>4.1.0</version>
+		</dependency>
         
   </dependencies>
   
